fix: fix element overlap

--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ li {
 .header-menu {
     display: flex;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     width: 100%;
     height: 60px;
     padding: 32px 6em 32px 6em;
